velka.parser/src/velka/parser/antlr/VelkaParser.java
// Generated from ../velka.parser/src/velka/parser/antlr/Velka.g4 by ANTLR 4.13.1
package velka.parser.antlr;

import velka.core.abstraction.*;
import velka.core.application.*;
import velka.core.expression.*;
import velka.core.literal.*;
import velka.types.*;
import velka.util.NameGenerator;

import java.util.List;
import java.util.Set;
import java.util.Stack;
import java.util.Iterator;
import java.util.ArrayList;
import java.util.HashSet;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class VelkaParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, TRUE=27, FALSE=28, INT=29, FLOAT=30, COMMENT=31, WS=32, 
		STRING=33, ARROW=34, LBRACKET=35, LSBRACKET=36, RBRACKET=37, RSBRACKET=38, 
		COLLON=39, SYMBOL=40;
	public static final int
		RULE_program = 0, RULE_expr = 1, RULE_argument_list = 2, RULE_bind = 3, 
		RULE_bind_list = 4, RULE_special_form = 5, RULE_atom = 6, RULE_application = 7, 
		RULE_type = 8, RULE_type_arrow = 9, RULE_type_atom = 10, RULE_representation_atom = 11, 
		RULE_type_tuple = 12;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "expr", "argument_list", "bind", "bind_list", "special_form", 
			"atom", "application", "type", "type_arrow", "type_atom", "representation_atom", 
			"type_tuple"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'nil'", "'and'", "'can-deconstruct-as'", "'define'", "'conversion'", 
			"'constructor'", "'deconstruct'", "'convert'", "'construct'", "'error'", 
			"'extend'", "'get'", "'if'", "'instance-of'", "'instance-of-representation'", 
			"'list'", "'loop'", "'or'", "'recur'", "'lambda'", "'extended-lambda'", 
			"'let'", "'let*'", "'let-type'", "'tuple'", "'eapply'", null, null, null, 
			null, null, null, null, "'#>'", "'('", "'['", "')'", "']'", "':'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, "TRUE", "FALSE", "INT", "FLOAT", "COMMENT", "WS", "STRING", 
			"ARROW", "LBRACKET", "LSBRACKET", "RBRACKET", "RSBRACKET", "COLLON", 
			"SYMBOL"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Velka.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }


		public static String unescapeString(String s) {
			StringBuilder result = new StringBuilder();
			for (int i = 0; i < s.length(); i++) {
				char c1 = s.charAt(i); 
				if ((c1 == '\\') && (i + 1 < s.length())) {
					char c2 = s.charAt(i + 1);
					switch (c2) {
						case 'n': result.append('\n'); i++; break;
						case 't': result.append('\t'); i++; break;
						case 'r': result.append('\r'); i++; break;
						case '\\': result.append('\\'); i++; break;
						default: result.append(c1);
					}
				} else result.append(c1);
			}
			return result.toString();
		}
		
		private Stack<Set<String>> typeVariableStack = new Stack<Set<String>>();
		
		/** Returns true if the name is declared type variable **/
		private boolean isDeclaredTypeVariable(String name){
			for(var s : this.typeVariableStack){
				if(s.contains(name)){
					return true;
				}
			}
			return false;
		}

	public VelkaParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramContext extends ParserRuleContext {
		public List<Expression> val;
		public ExprContext expr;
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof VelkaListener ) ((VelkaListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof VelkaListener ) ((VelkaListener)listener).exitProgram(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			 List<Expression> ll = new ArrayList<Expression>(); 
			setState(32);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 1144474566658L) != 0)) {
				{
				{
				setState(27);
				((ProgramContext)_localctx).expr = expr();
				 ll.add(((ProgramContext)_localctx).expr.val); 
				}
				}
				setState(34);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			 ((ProgramContext)_localctx).val =  ll; 
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ExprContext extends ParserRuleContext {
		public Expression val;
		public Special_formContext special_form;
		public AtomContext atom;
		public ApplicationContext application;
		public Special_formContext special_form() {
			return getRuleContext(Special_formContext.class,0);
		}
		public AtomContext atom() {
			return getRuleContext(AtomContext.class,0);
		}
		public ApplicationContext application() {
			return getRuleContext(ApplicationContext.class,0);
		}
		public ExprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expr; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof VelkaListener ) ((VelkaListener)listener).enterExpr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof VelkaListener ) ((VelkaListener)listener).exitExpr(this);
		}
	}

	public final ExprContext expr() throws RecognitionException {
		ExprContext _localctx = new ExprContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_expr);
		try {
			setState(48);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(37);
				((ExprContext)_localctx).special_form = special_form();
				 ((ExprContext)_localctx).val =  ((ExprContext)_localctx).special_form.val; 
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(40);
				((ExprContext)_localctx).atom = atom();
				 ((ExprContext)_localctx).val =  ((ExprContext)_localctx).atom.val; 
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(43);
				((ExprContext)_localctx).application = application();
				 ((ExprContext)_localctx).val =  ((ExprContext)_localctx).application.val; 
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(46);
				match(T__0);
				 ((ExprContext)_localctx).val =  Expression.EMPTY_EXPRESSION; 
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Argument_listContext extends ParserRuleContext {
		public List<velka.util.Pair<Symbol, Type>> val;
		public TypeContext type;
		public Token SYMBOL;
		public List<TerminalNode> LBRACKET() { return getTokens(VelkaParser.LBRACKET); }
		public TerminalNode LBRACKET(int i) {
			return getToken(VelkaParser.LBRACKET, i);
		}
		public List<TerminalNode> RBRACKET() { return getTokens(VelkaParser.RBRACKET); }
		public TerminalNode RBRACKET(int i) {
			return getToken(VelkaParser.RBRACKET, i);
		}
		public List<TypeContext> type() {
			return getRuleContexts(TypeContext.class);
		}
		public TypeContext type(int i) {
			return getRuleContext(TypeContext.class,i);
		}
		public List<TerminalNode> SYMBOL() { return getTokens(VelkaParser.SYMBOL); }
		public TerminalNode SYMBOL(int i) {
			return getToken(VelkaParser.SYMBOL, i);
		}
		public Argument_listContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_argument_list; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof VelkaListener ) ((VelkaListener)listener).enterArgument_list(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof VelkaListener ) ((VelkaListener)listener).exitArgument_list(this);
		}
	}

	public final Argument_listContext argument_list() throws RecognitionException {
		Argument_listContext _localctx = new Argument_listContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_argument_list);
		int _la;
		try {
			setState(77);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(50);
				match(LBRACKET);
				 var ll = new ArrayList<velka.util.Pair<Symbol, Type>>(); 
				setState(59); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(52);
					match(LBRACKET);
					setState(53);
					((Argument_listContext)_localctx).type = type();
					 var t = ((Argument_listContext)_localctx).type.val; 
					setState(55);
					((Argument_listContext)_localctx).SYMBOL = match(SYMBOL);
					 ll.add(velka.util.Pair.of(new Symbol((((Argument_listContext)_localctx).SYMBOL!=null?((Argument_listContext)_localctx).SYMBOL.getText():null)), t)); 
					setState(57);
					match(RBRACKET);
					}
					}
					setState(61); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( _la==LBRACKET );
				setState(63);
				match(RBRACKET);
				 ((Argument_listContext)_localctx).val =  ll; 
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(66);
				match(LBRACKET);
				 var ll = new ArrayList<velka.util.Pair<Symbol, Type>>(); 
				setState(72);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==SYMBOL) {
					{
					{
					setState(68);
					((Argument_listContext)_localctx).SYMBOL = match(SYMBOL);
					 
						            var t = new TypeVariable(NameGenerator.next());
									var s = new Symbol((((Argument_listContext)_localctx).SYMBOL!=null?((Argument_listContext)_localctx).SYMBOL.getText():null));
									ll.add(velka.util.Pair.of(s, t)); 
								  
					}
					}
					setState(74);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(75);
				match(RBRACKET);
				 ((Argument_listContext)_localctx).val =  ll; 
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class BindContext extends ParserRuleContext {
		public velka.util.Pair<Symbol, Expression> val;
		public Token SYMBOL;
		public ExprContext expr;
		public TerminalNode LBRACKET() { return getToken(VelkaParser.LBRACKET, 0); }
		public TerminalNode SYMBOL() { return getToken(VelkaParser.SYMBOL, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TerminalNode RBRACKET() { return getToken(VelkaParser.RBRACKET, 0); }
		public BindContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_bind; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof VelkaListener ) ((VelkaListener)listener).enterBind(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof VelkaListener ) ((VelkaListener)listener).exitBind(this);
		}
	}

	public final BindContext bind() throws RecognitionException {
		BindContext _localctx = new BindContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_bind);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(79);
			match(LBRACKET);
			setState(80);
			((BindContext)_localctx).SYMBOL = match(SYMBOL);
			 var s = new Symbol((((BindContext)_localctx).SYMBOL!=null?((BindContext)_localctx).SYMBOL.getText():null)); 
			setState(82);
			((BindContext)_localctx).expr = expr();
			 var e = ((BindContext)_localctx).expr.val; 
			setState(84);
			match(RBRACKET);
			 ((BindContext)_localctx).val =  velka.util.Pair.of(s, e); 
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Bind_listContext extends ParserRuleContext {
		public List<velka.util.Pair<Symbol, Expression>> val;
		public BindContext bind;
		public TerminalNode LBRACKET() { return getToken(VelkaParser.LBRACKET, 0); }
		public TerminalNode RBRACKET() { return getToken(VelkaParser.RBRACKET, 0); }
		public List<BindContext> bind() {
			return getRuleContexts(BindContext.class);
		}
		public BindContext bind(int i) {
			return getRuleContext(BindContext.class,i);
		}
		public Bind_listContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_bind_list; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof VelkaListener ) ((VelkaListener)listener).enterBind_list(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof VelkaListener ) ((VelkaListener)listener).exitBind_list(this);
		}
	}

	public final Bind_listContext bind_list() throws RecognitionException {
		Bind_listContext _localctx = new Bind_listContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_bind_list);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(87);
			match(LBRACKET);
			 var ll = new ArrayList<velka.util.Pair<Symbol, Expression>>(); 
			setState(94);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==LBRACKET) {
				{
				{
				setState(89);
				((Bind_listContext)_localctx).bind = bind();
				 ll.add(((Bind_listContext)_localctx).bind.val); 
				}
				}
				setState(96);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(97);
			match(RBRACKET);
			 ((Bind_listContext)_localctx).val =  ll; 
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Special_formContext extends ParserRuleContext {
		public Expression val;
		public ExprContext expr;
		public TypeContext type;
		public Token SYMBOL;
		public Representation_atomContext representation_atom;
		public Argument_listContext argument_list;
		public Bind_listContext bind_list;
		public List<TerminalNode> LBRACKET() { return getTokens(VelkaParser.LBRACKET); }
		public TerminalNode LBRACKET(int i) {
			return getToken(VelkaParser.LBRACKET, i);
		}
		public List<TerminalNode> RBRACKET() { return getTokens(VelkaParser.RBRACKET); }
		public TerminalNode RBRACKET(int i) {
			return getToken(VelkaParser.RBRACKET, i);
		}
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public List<TypeContext> type() {
			return getRuleContexts(TypeContext.class);
		}
		public TypeContext type(int i) {
			return getRuleContext(TypeContext.class,i);
		}
		public List<TerminalNode> SYMBOL() { return getTokens(VelkaParser.SYMBOL); }
		public TerminalNode SYMBOL(int i) {
			return getToken(VelkaParser.SYMBOL, i);
		}
		public List<Representation_atomContext> representation_atom() {
			return getRuleContexts(Representation_atomContext.class);
		}
		public Representation_atomContext representation_atom(int i) {
			return getRuleContext(Representation_atomContext.class,i);
		}
		public Argument_listContext argument_list() {
			return getRuleContext(Argument_listContext.class,0);
		}
		public Bind_listContext bind_list() {
			return getRuleContext(Bind_listContext.class,0);
		}
		public Special_formContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_special_form; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof VelkaListener ) ((VelkaListener)listener).enterSpecial_form(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof VelkaListener ) ((VelkaListener)listener).exitSpecial_form(this);
		}
	}
